# generator/src/test/resources/io/apitomy/umg/openapi-3.0.yaml
@@ -25,9 +25,11 @@ traits:
       - name: '$ref'
         type: string
 
+root:
+  type: Document
+
 entities:
   - name: Document
-    root: true
     traits:
       - Extensible
     properties:
